--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,10 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath*:META-INF/spring/application-context.xml</param-value>
     </context-param>
-
+    <context-param>
+        <param-name>spring.profiles.active</param-name>
+        <param-value>test</param-value>
+    </context-param>
     <listener>
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
