--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <log4j.version>1.2.17</log4j.version>
         <h2.version>1.4.191</h2.version>
         <commons.dbcp.version>1.2.2</commons.dbcp.version>
+        <spring.data.neo4j>4.1.1.RELEASE</spring.data.neo4j>
+        <neo4j.version>3.0.0</neo4j.version>
     </properties>
 
     <dependencies>
@@ -39,6 +41,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-neo4j</artifactId>
+            <version>${spring.data.neo4j}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -85,28 +92,42 @@
         </dependency>
         <!-- TEMPLATE -->
         <!--<dependency>-->
-            <!--<groupId>org.thymeleaf</groupId>-->
-            <!--<artifactId>thymeleaf</artifactId>-->
-            <!--<version>2.1.2.RELEASE</version>-->
-            <!--<scope>compile</scope>-->
+        <!--<groupId>org.thymeleaf</groupId>-->
+        <!--<artifactId>thymeleaf</artifactId>-->
+        <!--<version>2.1.2.RELEASE</version>-->
+        <!--<scope>compile</scope>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>org.thymeleaf</groupId>-->
-            <!--<artifactId>thymeleaf-spring4</artifactId>-->
-            <!--<version>2.1.2.RELEASE</version>-->
-            <!--<scope>compile</scope>-->
+        <!--<groupId>org.thymeleaf</groupId>-->
+        <!--<artifactId>thymeleaf-spring4</artifactId>-->
+        <!--<version>2.1.2.RELEASE</version>-->
+        <!--<scope>compile</scope>-->
         <!--</dependency>-->
         <!-- DATABASES -->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-jdbc</artifactId>-->
-            <!--<version>4.2.5.RELEASE</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j</artifactId>
+            <version>${neo4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-graphdb-api</artifactId>
+            <version>${neo4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-kernel</artifactId>
+            <version>${neo4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
-            <scope>test</scope>
         </dependency>
         <!--HIBERNATE-->
         <dependency>
