--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,7 @@
         <param-value>classpath*:META-INF/spring/application-context.xml</param-value>
     </context-param>
     <context-param>
+        <!--TODO: change profile-->
         <param-name>spring.profiles.active</param-name>
         <param-value>test</param-value>
     </context-param>
