--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <h2.version>1.4.191</h2.version>
         <commons.dbcp.version>1.2.2</commons.dbcp.version>
         <spring.data.neo4j>4.1.1.RELEASE</spring.data.neo4j>
-        <neo4j.version>3.0.0</neo4j.version>
+        <neo4j.version>3.0.3</neo4j.version>
     </properties>
 
     <dependencies>
@@ -91,18 +91,18 @@
             <scope>provided</scope>
         </dependency>
         <!-- TEMPLATE -->
-        <!--<dependency>-->
-        <!--<groupId>org.thymeleaf</groupId>-->
-        <!--<artifactId>thymeleaf</artifactId>-->
-        <!--<version>2.1.2.RELEASE</version>-->
-        <!--<scope>compile</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>org.thymeleaf</groupId>-->
-        <!--<artifactId>thymeleaf-spring4</artifactId>-->
-        <!--<version>2.1.2.RELEASE</version>-->
-        <!--<scope>compile</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>2.1.2.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring4</artifactId>
+            <version>2.1.2.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- DATABASES -->
         <dependency>
             <groupId>org.neo4j</groupId>
