--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,15 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
     <context-param>
+        <param-name>contextClass</param-name>
+        <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+    </context-param>
+    <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:META-INF/spring/application-context.xml</param-value>
+        <!--TODO: nemohu mít jen cz.zoubelu.config.*?-->
+        <param-value>
+            cz.zoubelu.config.ApplicationConfig,cz.zoubelu.config.TestConfig,cz.zoubelu.config.ProductionConfig,cz.zoubelu.config.GraphConfig
+        </param-value>
     </context-param>
     <context-param>
         <!--TODO: change profile-->
