--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,8 +1,9 @@
-log4j.rootLogger=trace, stdout
+log4j.rootLogger=WARN, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.logger.org.springframework.jdbc.datasource.init.ScriptUtils=INFO
+log4j.logger.org.springframework.jdbc.datasource.init.ScriptUtils=WARN
+log4j.logger.org.neo4j.ogm.drivers.embedded.request.EmbeddedRequest=WARN
