--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,13 @@
             <version>${spring.data.neo4j}</version>
             <type>test-jar</type>
         </dependency>
+        <!--JSON-->
+        <dependency>
+            <groupId>com.voodoodyne.jackson.jsog</groupId>
+            <artifactId>jackson-jsog</artifactId>
+            <version>1.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
