--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,12 @@
             <version>1.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>it.sauronsoftware.cron4j</groupId>
+            <artifactId>cron4j</artifactId>
+            <version>2.2.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
