--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,9 +2,9 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
-    <display-name>Neo4J</display-name>
+    <display-name>Struct</display-name>
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
     <context-param>
         <param-name>contextClass</param-name>
@@ -14,14 +14,16 @@
         <param-name>contextConfigLocation</param-name>
         <!--TODO: nemohu mít jen cz.zoubelu.config.*?-->
         <param-value>
-            cz.zoubelu.config.ApplicationConfig,cz.zoubelu.config.DataSourceTestConfig,cz.zoubelu.config.DataSourceProductionConfig,cz.zoubelu.config.GraphConfig
+            cz.zoubelu.config.*
         </param-value>
+        <!--cz.zoubelu.config.DataSourceTestConfig,-->
+        <!--cz.zoubelu.config.DataSourceProductionConfig,-->
         <!--cz.zoubelu.config.GraphConfig-->
     </context-param>
     <context-param>
         <!--TODO: change profile-->
         <param-name>spring.profiles.active</param-name>
-        <param-value>test</param-value>
+        <param-value>production</param-value>
     </context-param>
     <listener>
         <listener-class>
