Visualization first try

--- a/src/main/resources/conf/database.properties
+++ b/src/main/resources/conf/database.properties
@@ -1,5 +1,5 @@
 #TODO: doplnit konfiguraci informa log database
-driver=oracle
-url=
+driver=org.h2.Driver
+url=jdbc:h2:~/test;MODE=Oracle
 username=test
 password=test
