--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -7,3 +7,4 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 
 log4j.logger.org.springframework.jdbc.datasource.init.ScriptUtils=WARN
 log4j.logger.org.neo4j.ogm.drivers.embedded.request.EmbeddedRequest=WARN
+log4j.logger.org.neo4j.ogm.context.EntityGraphMapper=INFO
