--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             cz.zoubelu.config.ApplicationConfig,
-            cz.zoubelu.config.DataSourceProductionConfig,
+            cz.zoubelu.config.DataSourceProdConfig,
             cz.zoubelu.config.GraphConfig,
             cz.zoubelu.config.SchedulerConfig
         </param-value>
