--- a/src/main/resources/conf/database.properties
+++ b/src/main/resources/conf/database.properties
@@ -1,5 +1,8 @@
-#TODO: doplnit konfiguraci informa log database
-driver=org.h2.Driver
-url=jdbc:h2:~/test;MODE=Oracle
-username=test
-password=test
+driver=oracle.jdbc.OracleDriver
+url=jdbc:oracle:thin:@lnxoratest1.cpas.cz:1530:PSPDEV
+username=informa_log
+password=informa_log
+acquireIncrement=5
+maxIdleTime=28800
+maxPoolSize=3
+minPoolSize=1
