Got rid off XMLs, implemented Java Config only. Refactored tests (scheduler mainly).

--- a/src/main/resources/conf/database.properties
+++ b/src/main/resources/conf/database.properties
@@ -1,5 +1,5 @@
 driver=oracle.jdbc.OracleDriver
-url=jdbc:oracle:thin:@lnxoratest1.cpas.cz:1530:PSPDEV
+url=jdbc:oracle:thin:@lnxoratest1.cpas.cz:1530:HUGOAT2
 username=informa_log
 password=informa_log
 acquireIncrement=5
