--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,4 +5,10 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.logger.org.neo4j.ogm.context.EntityGraphMapper=INFO
+log4j.logger.org.neo4j.ogm.context.EntityGraphMapper=off
+
+log4j.logger.org.thymeleaf.templateresolver.AbstractTemplateResolver=off
+log4j.logger.org.thymeleaf.messageresolver.AbstractMessageResolver=off
+log4j.logger.org.thymeleaf.TemplateEngine=off
+log4j.logger.CONFIG=off
+log4j.logger.org.neo4j.ogm.metadata.ClassFileProcessor=off
