--- a/src/test/resources/conf/database.properties
+++ b/src/test/resources/conf/database.properties
@@ -4,3 +4,7 @@ driver=org.h2.Driver
 url=jdbc:h2:~/test;MODE=Oracle
 username=test
 password=test
+acquireIncrement=5
+maxIdleTime=28800
+maxPoolSize=3
+minPoolSize=1
