Fixed bug with duplicities, REFACTORED Systems codelist + some magic changes

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,3 +12,6 @@ log4j.logger.org.thymeleaf.messageresolver.AbstractMessageResolver=off
 log4j.logger.org.thymeleaf.TemplateEngine=off
 log4j.logger.CONFIG=off
 log4j.logger.org.neo4j.ogm.metadata.ClassFileProcessor=off
+#uncomment for sql logs
+log4j.logger.org.neo4j.ogm.drivers.embedded.request.EmbeddedRequest=off
+log4j.logger.org.neo4j.ogm.drivers.embedded.response.EmbeddedResponse=off
