--- a/src/main/resources/conf/database.properties
+++ b/src/main/resources/conf/database.properties
@@ -1,7 +1,9 @@
-driver=oracle.jdbc.OracleDriver
-url=jdbc:oracle:thin:@lnxoratest1.cpas.cz:1530:HUGOAT2
-username=informa_log
-password=informa_log
+driver=org.h2.Driver
+#TODO: vratit h2 pouze do in-memory stavu...
+#h2.url=jdbc:h2:mem:test_mem;DB_CLOSE_DELAY=-1;MODE=Oracle;AUTO_SERVER=FALSE
+url=jdbc:h2:~/test;MODE=Oracle
+username=test
+password=test
 acquireIncrement=5
 maxIdleTime=28800
 maxPoolSize=3
