DataSource config refactor, test FIX, getSystemByName FIX,Changed DataSource to ComboPooled, implemented convertMethod for TableName

--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
         <!--HIBERNATE-->
         <!--<dependency>-->
             <!--<groupId>org.hibernate</groupId>-->
