--- a/src/main/resources/conf/config.properties
+++ b/src/main/resources/conf/config.properties
@@ -1,2 +1,3 @@
+#"59 11 * * Sun" - PRIKLAD, KAZDOU NEDELI V 11:59
 scheduler.pattern=* * * * *
-#		"59 11 * * Sun" - PRIKLAD, KAZDOU NEDELI V 11:59
+table.prefix=A_MESSAGE_
