--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=info, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
@@ -8,3 +8,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 log4j.logger.org.springframework.jdbc.datasource.init.ScriptUtils=WARN
 log4j.logger.org.neo4j.ogm.drivers.embedded.request.EmbeddedRequest=WARN
 log4j.logger.org.neo4j.ogm.context.EntityGraphMapper=INFO
+log4j.logger.com.mchange.v2.c3p0.impl.NewPooledConnection=INFO
+log4j.logger.com.mchange.v2.c3p0.impl.AbstractPoolBackedDataSource=INFO
