--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=info, stdout
+log4j.rootLogger=info, stdout,conversionDetailLog,conversionErrorLog
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
@@ -13,5 +13,23 @@ log4j.logger.org.thymeleaf.TemplateEngine=off
 log4j.logger.CONFIG=off
 log4j.logger.org.neo4j.ogm.metadata.ClassFileProcessor=off
 #uncomment for sql logs
-log4j.logger.org.neo4j.ogm.drivers.embedded.request.EmbeddedRequest=off
-log4j.logger.org.neo4j.ogm.drivers.embedded.response.EmbeddedResponse=off
+log4j.logger.org.neo4j.ogm.drivers.embedded.request.EmbeddedRequest=INFO
+log4j.logger.org.neo4j.ogm.drivers.embedded.response.EmbeddedResponse=INFO
+
+# Direct log messages to a log file - There should be all errors except formula evaluation
+log4j.appender.conversionDetailLog=org.apache.log4j.RollingFileAppender
+log4j.appender.conversionDetailLog.File=/opt/tomcat/logs/itreporting-import-report.log
+log4j.appender.conversionDetailLog.MaxFileSize=10MB
+log4j.appender.conversionDetailLog.MaxBackupIndex=1
+log4j.appender.conversionDetailLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.conversionDetailLog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+
+# Direct log messages to a log file - There should be all formula evaluation errors
+log4j.appender.conversionErrorLog=org.apache.log4j.RollingFileAppender
+log4j.appender.conversionErrorLog.File=/opt/tomcat/logs/itreporting-import-report-error.log
+log4j.appender.conversionErrorLog.MaxFileSize=10MB
+log4j.appender.conversionErrorLog.MaxBackupIndex=1
+log4j.appender.conversionErrorLog.Threshold=error
+log4j.appender.conversionErrorLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.conversionErrorLog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
