Removed properties, renamed properties to be app specific, refactor of utils

--- a/src/main/resources/conf/neo-config.properties
+++ b/src/main/resources/conf/neo-config.properties
@@ -1,3 +1,4 @@
 #"59 11 * * Sun" - PRIKLAD, KAZDOU NEDELI V 11:59
-scheduler.pattern=* * * * *
+#scheduler.pattern=* * * * *
+scheduler.pattern=30 12 * * Wed
 table.prefix=A_MESSAGE_
