--- a/pom.xml
+++ b/pom.xml
@@ -130,11 +130,11 @@
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>com.oracle</groupId>-->
-        <!--<artifactId>ojdbc6</artifactId>-->
-        <!--<version>11.2.0</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0</version>
+        </dependency>
         <dependency>
             <groupId>c3p0</groupId>
             <artifactId>c3p0</artifactId>
@@ -167,7 +167,7 @@
             <version>${neo4j.version}</version>
             <type>test-jar</type>
         </dependency>
-        <!--zmena pri prechodu do production-->
+        <!--TODO: zmena pri prechodu do production-->
         <!--pridana netestova verze neo4j server-->
         <dependency>
             <groupId>org.neo4j.app</groupId>
@@ -185,8 +185,7 @@
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-ogm-test</artifactId>
             <version>2.0.3</version>
-            <!--TODO: vratit zpet na test, poskytuje pristup k http a embedded driveru na test-->
-            <!--<scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
         <!--JSON-->
         <dependency>
@@ -247,20 +246,10 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-war-plugin</artifactId>
                         <configuration>
-                            <webResources>
-                                <resource>
-                                    <directory>src/main/resources</directory>
-                                    <targetPath>META-INF</targetPath>
-                                    <includes>
-                                        <include>context.xml</include>
-                                    </includes>
-                                </resource>
-                            </webResources>
                             <packagingExcludes>
-                                WEB-INF/classes/context.xml,
                                 WEB-INF/classes/log4j.properties,
-                                WEB-INF/classes/config/**/*,
-                                WEB-INF/classes/config
+                                WEB-INF/classes/conf/**/*,
+                                WEB-INF/classes/conf
                             </packagingExcludes>
                         </configuration>
                     </plugin>
@@ -271,7 +260,7 @@
                         <filtering>true</filtering>
                         <excludes>
                             <exclude>log4j.properties</exclude>
-                            <exclude>config/**/*</exclude>
+                            <exclude>conf/**/*</exclude>
                         </excludes>
                     </resource>
                 </resources>
