Trying to implement cache for better performance.

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,6 +15,9 @@ log4j.logger.org.neo4j.ogm.metadata.ClassFileProcessor=off
 #uncomment for sql logs
 log4j.logger.org.neo4j.ogm.drivers.embedded.request.EmbeddedRequest=INFO
 log4j.logger.org.neo4j.ogm.drivers.embedded.response.EmbeddedResponse=INFO
+log4j.logger.org.springframework.jdbc.core = TRACE
+log4j.logger.org.neo4j.ogm.drivers.http.request.HttpRequest=off
+
 
 # Direct log messages to a log file - There should be all errors except formula evaluation
 log4j.appender.conversionDetailLog=org.apache.log4j.RollingFileAppender
