--- a/src/main/resources/conf/neo-config.properties
+++ b/src/main/resources/conf/neo-config.properties
@@ -1,4 +1,5 @@
 #"59 11 * * Sun" - PRIKLAD, KAZDOU NEDELI V 11:59
+#"59 11 5 * *" - 5. den v mesici v 11:59
 #scheduler.pattern=* * * * *
-scheduler.pattern=30 12 * * Wed
-table.prefix=A_MESSAGE_
+scheduler.pattern=59 11 * * Sun
+table.prefix=Informa_log.A_MESSAGE_
