--- a/src/test/resources/conf/database.properties
+++ b/src/test/resources/conf/database.properties
@@ -1,7 +1,5 @@
 driver=org.h2.Driver
-#TODO: vratit h2 pouze do in-memory stavu...
-#h2.url=jdbc:h2:mem:test_mem;DB_CLOSE_DELAY=-1;MODE=Oracle;AUTO_SERVER=FALSE
-url=jdbc:h2:~/test;MODE=Oracle
+url=jdbc:h2:mem:test_mem;DB_CLOSE_DELAY=-1;MODE=Oracle;AUTO_SERVER=FALSE
 username=test
 password=test
 acquireIncrement=5
