removed application cache

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
         <h2.version>1.4.191</h2.version>
         <commons.dbcp.version>1.2.2</commons.dbcp.version>
         <spring.data.neo4j>4.1.1.RELEASE</spring.data.neo4j>
-        <!--was 2.3.5-->
         <neo4j.version>2.3.7</neo4j.version>
     </properties>
 
@@ -73,22 +72,11 @@
             <version>${log4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.tomcat.maven</groupId>
-            <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.2</version>
-            <type>maven-plugin</type>
-            <exclusions>
-                <exclusion>
-                    <artifactId>tomcat-catalina</artifactId>
-                    <groupId>org.apache.tomcat</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>tomcat-util</artifactId>
-                    <groupId>org.apache.tomcat</groupId>
-                </exclusion>
-            </exclusions>
-            <scope>provided</scope>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
         </dependency>
+
         <!-- TEMPLATE -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
@@ -103,26 +91,27 @@
             <scope>compile</scope>
         </dependency>
         <!-- DATABASES -->
-        <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j</artifactId>
-            <version>${neo4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-kernel</artifactId>
-            <version>${neo4j.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.neo4j</groupId>-->
+            <!--<artifactId>neo4j</artifactId>-->
+            <!--<version>${neo4j.version}</version>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<artifactId>org.neo4j</artifactId>-->
+                    <!--<groupId>neo4j-cypher-compiler-2.2_2.11</groupId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.neo4j.driver</groupId>
             <artifactId>neo4j-java-driver</artifactId>
             <version>1.0.3</version>
         </dependency>
-        <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-ogm</artifactId>
-            <version>1.1.6</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.neo4j</groupId>-->
+            <!--<artifactId>neo4j-ogm</artifactId>-->
+            <!--<version>1.1.6</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
@@ -241,46 +230,50 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-war-plugin</artifactId>
+                        <version>2.5</version>
                         <configuration>
-                            <packagingExcludes>
-                                WEB-INF/classes/log4j.properties,
-                                WEB-INF/classes/conf/**/*,
-                                WEB-INF/classes/conf
-                            </packagingExcludes>
+                            <failOnMissingWebXml>false</failOnMissingWebXml>
                         </configuration>
+                        <!--<configuration>-->
+                            <!--<packagingExcludes>-->
+                                <!--WEB-INF/classes/log4j.properties,-->
+                                <!--WEB-INF/classes/conf/**/*,-->
+                                <!--WEB-INF/classes/conf-->
+                            <!--</packagingExcludes>-->
+                        <!--</configuration>-->
                     </plugin>
                 </plugins>
                 <resources>
                     <resource>
                         <directory>src/main/resources</directory>
                         <filtering>true</filtering>
-                        <excludes>
-                            <exclude>log4j.properties</exclude>
-                            <exclude>conf/**/*</exclude>
-                        </excludes>
+                        <!--<excludes>-->
+                            <!--<exclude>log4j.properties</exclude>-->
+                            <!--<exclude>conf/**/*</exclude>-->
+                        <!--</excludes>-->
                     </resource>
                 </resources>
             </build>
-            <dependencies>
-                <dependency>
-                    <groupId>commons-dbcp</groupId>
-                    <artifactId>commons-dbcp</artifactId>
-                    <version>${commons.dbcp.version}</version>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>c3p0</groupId>
-                    <artifactId>c3p0</artifactId>
-                    <version>${c3p0.version}</version>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>com.oracle</groupId>
-                    <artifactId>ojdbc6</artifactId>
-                    <version>${ojdbc.version}</version>
-                    <scope>provided</scope>
-                </dependency>
-            </dependencies>
+            <!--<dependencies>-->
+                <!--<dependency>-->
+                    <!--<groupId>commons-dbcp</groupId>-->
+                    <!--<artifactId>commons-dbcp</artifactId>-->
+                    <!--<version>${commons.dbcp.version}</version>-->
+                    <!--<scope>provided</scope>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                    <!--<groupId>c3p0</groupId>-->
+                    <!--<artifactId>c3p0</artifactId>-->
+                    <!--<version>${c3p0.version}</version>-->
+                    <!--<scope>provided</scope>-->
+                <!--</dependency>-->
+                <!--<dependency>-->
+                    <!--<groupId>com.oracle</groupId>-->
+                    <!--<artifactId>ojdbc6</artifactId>-->
+                    <!--<version>${ojdbc.version}</version>-->
+                    <!--<scope>provided</scope>-->
+                <!--</dependency>-->
+            <!--</dependencies>-->
         </profile>
     </profiles>
 </project>
