--- a/src/main/resources/conf/neo-config.properties
+++ b/src/main/resources/conf/neo-config.properties
@@ -1,5 +1,5 @@
 #"59 11 * * Sun" - PRIKLAD, KAZDOU NEDELI V 11:59
 #"59 11 5 * *" - 5. den v mesici v 11:59
 #scheduler.pattern=* * * * *
-scheduler.pattern=59 11 * * Sun
+scheduler.pattern=59 11 5 * *
 table.prefix=Informa_log.A_MESSAGE_
