--- a/src/main/resources/conf/neo-config.properties
+++ b/src/main/resources/conf/neo-config.properties
@@ -3,3 +3,4 @@
 #scheduler.pattern=* * * * *
 scheduler.pattern=59 11 5 * *
 table.prefix=Informa_log.A_MESSAGE_
+last.conversion.date=2016-09-31 00:00:00
