Added file list view on FE. + Implemented email sender.

--- a/src/test/resources/conf/neo-config.properties
+++ b/src/test/resources/conf/neo-config.properties
@@ -1,4 +1,4 @@
 #Each minute
 scheduler.pattern=* * * * *
 table.prefix=A_MESSAGE_
-systems.list.location=SYSTEM_LIST.csv
+systems.list.location=SYSTEMS_LIST.csv
